app/styles/app.scss
/* purgecss start ignore */

@tailwind base;

@import "colors.scss";
@import "flags.scss";
@import "loading-spinner.scss";
@import "container.scss";
@import "stripe-animation.scss";
@import "shake.scss";

@import "player.scss";

@tailwind components;

@layer base {
  h1 {
    @apply text-8xl font-semibold;
  }
  h2 {
    @apply text-6xl font-semibold;
  }
  h3 {
    @apply text-4xl font-semibold;
  }
  h4 {
    @apply text-2xl font-semibold;
  }
}

pre {
  background-color: #f8f8f8;
  border: 1px solid #dfdfdf;
  color: black;
  text-shadow: none;
  padding: 5px;
}

* {
  cursor: url("/assets/images/mousepointer.png"), auto !important;
}

@font-face {
  font-family: "Debussy";
  src:
    url("/vendor/hinted-Debussy.woff2") format("woff2"),
    url("/vendor/hinted-Debussy.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Topaz";
  src: url("/vendor/TopazPlus_a1200.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
  font-smooth: never !important;
  -webkit-font-smooth: none !important;
  -webkit-font-smoothing: none !important;
  -moz-osx-font-smoothing: none !important;
  font-smoothing: none !important;
}

/* animations seem annoying to do in tailwind without some kind of plugin... */
.logo {
  transform: rotate(-3deg);
  @media (min-width: 480px) {
    animation: textshadowfade 5s infinite;
  }
}

/* can't do text-shadow in tailwind */
.text-shadow {
  text-shadow: #333 1px 1px 1px;
}

.text-shadow-light {
  text-shadow: 0 1px 0 #777;
}

.text-shadow-none {
  text-shadow: none;
}

.flex-basis-0 {
  flex-basis: 0;
}

@keyframes textshadowfade {
  from {
    text-shadow:
      $green -1px -1px,
      $green -2px -2px,
      $green -3px -3px,
      $green -4px -4px,
      $green -5px -5px,
      $green -6px -6px,
      $green -7px -7px,
      $green -8px -8px,
      $green -9px -9px,
      $green -10px -10px,
      $green -11px -11px,
      $green -12px -12px,
      $green -13px -13px,
      $green -14px -14px,
      $green -15px -15px;
  }
  30% {
    text-shadow:
      $pink -1px -1px,
      $pink -2px -2px,
      $pink -3px -3px,
      $pink -4px -4px,
      $pink -5px -5px,
      $pink -6px -6px,
      $pink -7px -7px,
      $pink -8px -8px,
      $pink -9px -9px,
      $pink -10px -10px,
      $pink -11px -11px,
      $pink -12px -12px,
      $pink -13px -13px,
      $pink -14px -14px,
      $pink -15px -15px;
  }
  60% {
    text-shadow:
      $blue -1px -1px,
      $blue -2px -2px,
      $blue -3px -3px,
      $blue -4px -4px,
      $blue -5px -5px,
      $blue -6px -6px,
      $blue -7px -7px,
      $blue -8px -8px,
      $blue -9px -9px,
      $blue -10px -10px,
      $blue -11px -11px,
      $blue -12px -12px,
      $blue -13px -13px,
      $blue -14px -14px,
      $blue -15px -15px;
  }
  90% {
    text-shadow:
      $yellow -1px -1px,
      $yellow -2px -2px,
      $yellow -3px -3px,
      $yellow -4px -4px,
      $yellow -5px -5px,
      $yellow -6px -6px,
      $yellow -7px -7px,
      $yellow -8px -8px,
      $yellow -9px -9px,
      $yellow -10px -10px,
      $yellow -11px -11px,
      $yellow -12px -12px,
      $yellow -13px -13px,
      $yellow -14px -14px,
      $yellow -15px -15px;
  }
  to {
    text-shadow:
      $green -1px -1px,
      $green -2px -2px,
      $green -3px -3px,
      $green -4px -4px,
      $green -5px -5px,
      $green -6px -6px,
      $green -7px -7px,
      $green -8px -8px,
      $green -9px -9px,
      $green -10px -10px,
      $green -11px -11px,
      $green -12px -12px,
      $green -13px -13px,
      $green -14px -14px,
      $green -15px -15px;
  }
}

@keyframes colorfade {
  from {
    color: $green;
  }
  30% {
    color: $pink;
  }
  60% {
    color: $blue;
  }
  90% {
    color: $yellow;
  }
  to {
    color: $green;
  }
}

@keyframes bg-colorfade {
  from {
    background: $green;
  }
  30% {
    background: $pink;
  }
  60% {
    background: $blue;
  }
  90% {
    background: $yellow;
  }
  to {
    background: $green;
  }
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes bounce2 {
  0%,
  100% {
    transform: scale(1);
  }

  30% {
    transform: scale(1.8, 1.7);
  }

  50% {
    transform: scale(2);
  }

  80% {
    transform: scale(1.8, 1.7);
  }
}

.bleed {
  @include stripe-animation;
}

.shake {
  background: $green;
  border: solid 1px white;
  @apply p-2 rounded-lg;
  @include shake-animation;
}

.cool-button {
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  box-shadow:
    inset 0.2em 0.2em 0.2em 0 rgba(255, 255, 255, 0.5),
    inset -0.2em -0.2em 0.2em 0 rgba(0, 0, 0, 0.5);
  @apply border-solid border-2 border-white text-lg rounded-sm;
  @apply text-white font-semibold p-2 leading-none bg-df-blue;
  @apply transition-all duration-100 ease-in-out;
  @apply cursor-pointer;
  &.hack {
    @apply bg-df-yellow text-black;
    text-shadow: none;
    &:hover,
    &:focus {
      @apply bg-df-yellow-dark;
    }
  }
}

.cool-button {
  & img.emojione {
    height: 2ex !important;
  }
  &:hover,
  &:focus {
    @apply bg-df-blue-dark;
    @apply border-solid border-2 border-gray-100;
  }

  &:disabled {
    @apply cursor-not-allowed opacity-50;
  }

  &:active {
  }

  &.not-favorited {
    @apply bg-white text-df-pink border-df-pink p-1;
    &:hover,
    &:focus {
      @apply bg-gray-300;
    }
  }

  &.favorited {
    @apply bg-df-pink text-white border-white p-1;
  }
}

.chat-input {
  .cool-button {
    height: 38px;
  }
}

.modal-body form div {
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
}

img.emojione {
  height: 4.5ex !important;
}

//chat autofill emoji and username picker
.dropdown-menu {
  @apply bg-df-pink rounded-sm border-4 border-dotted border-df-green overflow-scroll h-40;
  img {
    @apply inline;
  }
}

// some defaults to make things easier
a {
  @apply text-df-yellow;
}
/* ... */

